tests/ui/compile_error_in_generated_content.stderr
error[E0308]: mismatched types
 --> tests/ui/compile_error_in_generated_content.rs:3:17
  |
3 |       #[fieldwork(get, deref = "()")]
  |                   ^----------------
  |                   |
  |  _________________expected `&()` because of return type
  | |
4 | |     string: String,
  | |__________^ expected `&()`, found `&str`
  |
  = note: expected reference `&()`
             found reference `&str`

error[E0308]: mismatched types
  --> tests/ui/compile_error_in_generated_content.rs:11:5
   |
10 |       #[fieldwork(deref = "()")]
   |  _________________________-
11 | |     string: String,
   | |     ^^^^^^^^^^^^^-
   | |_____|____________|
   |       |            expected `&()` because of return type
   |       expected `&()`, found `&str`
   |
   = note: expected reference `&()`
              found reference `&str`
